Initial quick fixes; all block and item registration overhauled